--- a/testStyle.css
+++ b/testStyle.css
@@ -17,14 +17,14 @@ Keyword colors can be found at http://colours.neilorangepeel.com/
 .messageBox {
     height: 40%;
     width: 80%;
-    font-size: min(5vh);
+    font-size: 5vh;
 }
 
 @media screen and (max-width: 600px) {
     .messageBox {
         height: 40%;
         width: 100%;
-        font-size: min(5vw);
+        font-size: 25vw;
     }
 }
 
