--- a/testStyle.css
+++ b/testStyle.css
@@ -24,7 +24,7 @@ Keyword colors can be found at http://colours.neilorangepeel.com/
     .messageBox {
         height: 40%;
         width: 100%;
-        font-size: 2vw;
+        font-size: 10%;
     }
 }
 
