--- a/testStyle.css
+++ b/testStyle.css
@@ -61,7 +61,8 @@ Keyword colors can be found at http://colours.neilorangepeel.com/
     flex-direction: row;
 
     color: white;
-    font-size: 100%;
+    /* font-size: 100%; */
+    font-size: min(2.5vh, 2.5vw);
     /* vertical for row or horizontal for column*/
     align-items: center;
 }
@@ -82,7 +83,7 @@ Keyword colors can be found at http://colours.neilorangepeel.com/
     .gameTitle,
     .gameDescription {
         padding-left: 5vh;
-        font-size: min(2.5vh, 2vw);
+        font-size: min(2.5vh, 2.5vw);
         /* display: flex; */
         /* flex-direction: column; */
         width: 100%;
